fix: show active menu item with opacity on mobile

--- a/client/app/components/authors/header/menu/AuthorMenu.scss
+++ b/client/app/components/authors/header/menu/AuthorMenu.scss
@@ -1,4 +1,4 @@
-.pages-menu .page-link {
+.page-link {
   @include MenuHover(var(--page-menu-link-color));
 
   &.button--active::before {
